--- a/public/style.css
+++ b/public/style.css
@@ -15,6 +15,14 @@ nav a {
   margin: 1em;
 }
 
+.navh1 {
+  font-family: 'Oswald', sans-serif;
+  text-transform: uppercase;
+  font-size: 30px;
+  letter-spacing: 2px;
+  word-spacing: 2px;
+}
+
 form div {
   margin: 1em;
   display: inline-block;
